--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/service.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/service.ts",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +14,20 @@
     "@types/swagger-ui-express": "^4.1.3",
     "csv-parse": "^5.0.4",
     "express": "^4.17.3",
+    "mongodb": "^3.7.3",
+    "mongoose": "^6.3.1",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.26",
+    "@types/node": "^17.0.31",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
