--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/swagger-ui-express": "^4.1.3",
+    "bcrypt": "^5.0.1",
     "csv-parse": "^5.0.4",
     "express": "^4.17.3",
     "mongodb": "^3.7.3",
@@ -21,6 +23,7 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "tsyringe": "^4.6.0",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
