--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@types/bcrypt": "^5.0.0",
     "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "csv-parse": "^5.0.4",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.7.3",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-autogen": "^2.21.1",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.3.6",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.31",
     "ts-node": "^10.7.0",
