--- a/api-express/package.json
+++ b/api-express/package.json
@@ -15,6 +15,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
