--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3333/",
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
@@ -10,8 +11,12 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
