--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "typescript": "^4.6.4",
